# ai_financial_copilot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  Dockerfile.frontend  Dockerfile.worker  Makefile  main.py  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: canary.yml  ci.yml
infra/config/: error_maps.yaml  models.yaml  vllm_config_qwen.yaml
infra/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  docker-compose-pc.yml  docker-compose.yml
infra/docker/clickhouse/config.d/: langfuse-cluster.xml
infra/docker/elasticsearch/: bootstrap.sh  ilm-policy.json  index-template.json
infra/docker/fluent-bit/: fluent-bit.conf  parsers.conf
infra/docker/garage/: garage.toml  garage_bootstrap.Dockerfile
infra/docker/grafana/dashboards/: agentic-rag.json  ai_financial_copilot.json  api-overview.json  cost-tokens.json  eval-canary.json  logs-explorer.json  logs-scratchpad.json  worker-health.json
infra/docker/grafana/provisioning/datasources/: datasources.yaml  prometheus.yaml
infra/docker/prometheus/: prometheus.yml
infra/scripts/: garage_bootstrap.sh  langfuse_bootstrap.sh  pgbouncer-entrypoint.sh
infra/scripts/db_init/: 00_db_init.sh  01_create_app_tables.sh
prompts/: query_router_v1.yaml  query_router_v2.yaml  query_router_v3.yaml  query_transformer_v1.yaml  query_transformer_v2.yaml  system_v1.yaml  system_v3_agent.yaml  system_v3_agent_analytical.yaml  system_v3_agent_synthesis.yaml  system_v3_bracket.yaml  system_v3_none.yaml  table_summarizer_v1.yaml  user_v1.yaml
scripts/: cleanup_orphaned_s3.py  insert_injection_test_chunks.py  rename_pdfs_by_company.py  repro_lf_naming.py  restore_pdfs_to_s3.py  run_dev.sh  wipe_document.py
src/: celery_app.py  main.py  redis_client.py
src/api/: __init__.py  deps.py  exceptions.py  logging.py  middleware.py
src/api/routers/: __init__.py  auth.py  chat.py  conversations.py  documents.py  feedback.py  models.py
src/db/: __init__.py  base.py  connection.py
src/eval/: backfill_baseline.py  compare.py  loader.py  matching.py  pipeline.py  pipeline_agent.py  run.py  run_agent.py  schemas.py
src/eval/fixtures/: canary_eval.json
src/eval/fixtures/runs/: canary_baseline.json  canary_gpt4o_mini.json  canary_gpt4o_mini_vs_canary_baseline.compare.json
src/eval/metrics/: correctness.py  judge.py  retrieval.py
src/eval/prompts/: driver_recall_judge_v1.yaml  judge_system.yaml
src/models/: __init__.py  canary_run.py  canary_run_result.py  chunk.py  conversation.py  document.py  llm_request.py  message.py  message_feedback.py  session.py  user.py
src/observability/: langfuse.py  metrics.py  worker_metrics.py
src/repository/: __init__.py  canary_run_repository.py  chunk_repository.py  conversation_repository.py  document_repository.py  llm_request_repository.py  message_feedback_repository.py  message_repository.py  session_repository.py  user_repository.py
src/schemas/: __init__.py  agent_findings.py  auth.py  chat.py  documents.py  feedback.py  prompt.py  query_router.py  query_transform.py  retrieval.py  table_summarizer.py
src/services/: llm_router.py  opensearch_client.py  qdrant_client.py
src/services/auth/: __init__.py  jwt_service.py
src/services/chat/: agent_loop.py  citation_parser.py  confidence.py  events.py  findings_processor.py  naming.py  tasks.py  tools.py
src/services/context/: __init__.py  context_builder.py  conversation_history.py  prompt_assembler.py
src/services/ingestion/: celery_app.py  chunker.py  docling_parser.py  embedder.py  opensearch_client.py  opensearch_ingest.py  qdrant_client.py  qdrant_ingest.py  s3_client.py  table_summarizer.py  tasks.py
src/services/llm_adapters/: base_adapter.py  gemini_adapter.py  openai_adapter.py
src/services/llm_runtime/: exception_mapper.py  exceptions.py
src/services/prompts/: __init__.py  prompt_loader.py  prompt_renderer.py
src/services/retrieval/: chat_rag.py  context_assembler.py  hybrid_retriever.py  opensearch_retriever.py  payload_hydrator.py  qdrant_retriever.py  query_processor.py  query_transformer.py  reranker.py
src/services/router/: entity_resolver.py  parser.py  router.py  scope_resolver.py
src/services/security/: injection_detector.py  unicode_tables.py
src/ui/: App.tsx  README.md  index.css  index.html  index.tsx  metadata.json  nginx.conf  package-lock.json  package.json  tailwind.config.ts  theme.ts  types.ts  vite.config.ts
src/ui/components/: CitedText.tsx  ControlPane.tsx  DocPickerModal.tsx  EvidencePanel.tsx  LoginPage.tsx  MessageActions.tsx  ScopeBar.tsx  ThemePreview.tsx  UploadModal.tsx  ui.tsx
src/ui/context/: AuthContext.tsx
src/ui/services/: api.ts  mockData.ts
src/utils/: config.py  json_schema.py  llm_adapter_utils.py  llm_utils.py
src/workers/: chat_worker.py  ingestion_worker.py
tests/integration/: conftest.py  test_auth_integration.py  test_chat_full_flow.py  test_chat_tasks_pipeline_smoke.py  test_chunker_integration.py  test_ingestion_worker.py  test_retrieval_clients.py
tests/unit/: test_agent_loop_smoke.py  test_agent_tools.py  test_api_main_and_routes.py  test_auth_middleware.py  test_chat_events.py  test_chat_tail_cache.py  test_chunker.py  test_citation_parser.py  test_context_assembler.py  test_entity_resolver.py  test_exceptions.py  test_findings_processor.py  test_hybrid_retriever.py  test_injection_detector.py  test_jwt_service.py  test_llm_router.py  test_opensearch_ingest.py  test_opensearch_retriever.py  test_prompts.py  test_qdrant_ingest.py  test_qdrant_retriever.py  test_rate_limit.py  test_reranker.py  test_router_parser.py  test_router_route_query.py  test_scope_resolver.py  test_user_isolation.py
