[project]
name = "ai-financial-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.3.1",
    "docling>=2.74.0",
    "easyocr>=1.7.2",
    "google-api-core>=2.29.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langfuse>=4.5.1",
    "opensearch-py>=3.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "rapidfuzz>=3.14.5",
    "redis>=7.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "fakeredis[lua]>=2.34.1",
    "httpx>=0.28.0",
    "notebook>=7.5.4",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.13",
]
llm-engine = [
    "google-genai>=1.60.0",
    "openai>=2.15.0",
    "vllm>=0.17.0",
]


[tool.ruff]
# Line length (matches common Python style)
line-length = 100

# Target Python version
target-version = "py312"

# Include/exclude patterns
include = ["*.py"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

# Ignore specific rules (add more as needed)
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "SIM108",
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Use double quotes
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Use trailing commas
skip-magic-trailing-comma = false
# Line ending style
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: integration tests (require Docker: postgres, pgbouncer, redis-app, redis-broker)",
]
